--- a/requirements.inference.txt
+++ b/requirements.inference.txt
@@ -1,6 +1,6 @@
 fastapi==0.95.2
 uvicorn[standard]==0.22.0
 onnxruntime
-pillow==10.0.0
-numpy==1.26.0
-python-multipart==0.0.6
+pillow
+numpy
+python-multipart
